@@ -1,0 +1,3 @@
+<IMETHODRESPONSE NAME="CreateInstance">
+<KEYVALUE VALUETYPE="string">CIM_ComputerSystem</KEYVALUE>
+<KEYVALUE VALUETYPE="string">TS_SNS_FILTER</KEYVALUE>
