@@ -1,0 +1,43 @@
+    <?xml version="1.0" encoding="utf-8"?> 
+    <CIM CIMVERSION="2.0" DTDVERSION="2.0"> 
+    <MESSAGE ID="4711" PROTOCOLVERSION="1.0"> 
+      <SIMPLEREQ> 
+        <IMETHODCALL NAME="CreateInstance"> 
+          <LOCALNAMESPACEPATH> 
+            <NAMESPACE NAME="root"/> 
+            <NAMESPACE NAME="interop"/> 
+          </LOCALNAMESPACEPATH> 
+          <IPARAMVALUE NAME="NewInstance"> 
+              <INSTANCE CLASSNAME="CIM_IndicationFilter">
+                <PROPERTY NAME="SystemCreationClassName" TYPE="string"> 
+                  <VALUE>CIM_ComputerSystem</VALUE> 
+                </PROPERTY> 
+                <PROPERTY NAME="SystemName" TYPE="string"> 
+                  <VALUE>localhost</VALUE> 
+                </PROPERTY> 
+                <PROPERTY NAME="CreationClassName" TYPE="string"> 
+                  <VALUE>CIM_IndicationFilter</VALUE> 
+                </PROPERTY> 
+                <PROPERTY NAME="Name" TYPE="string"> 
+                  <VALUE>TS_SNS_FILTER</VALUE> 
+                </PROPERTY> 
+                <PROPERTY NAME="Query" TYPE="string"> 
+                  <VALUE> SELECT * FROM CIM_InstModification 
+                  </VALUE> 
+                </PROPERTY> 
+                <PROPERTY NAME="QueryLanguage" TYPE="string"> 
+                  <VALUE>WQL</VALUE> 
+                </PROPERTY> 
+                <PROPERTY.ARRAY NAME="SourceNamespaces" TYPE="string">
+                    <VALUE.ARRAY>
+                    <VALUE>root/interop1</VALUE>
+                    <VALUE>root/interop2</VALUE>
+                    </VALUE.ARRAY>
+                </PROPERTY.ARRAY>
+              </INSTANCE> 
+            </IPARAMVALUE> 
+          </IMETHODCALL> 
+        </SIMPLEREQ> 
+      </MESSAGE> 
+    </CIM>
+
