@@ -1,0 +1,2 @@
+<IMETHODRESPONSE NAME="DeleteInstance">
+!<ERROR CODE
